sylvander-tui/tests/snapshots/snapshots__approval_modal_batch_with_three_tools.snap
---
source: sylvander-tui/tests/snapshots.rs
assertion_line: 317
expression: "render_buf(state, 90, 28)"
---
                     ⢀⣠⢠⡖                                                                 
                  ⢀⣠⣶⣿⡇⣿⣷⣤⣀                     Sylvander                                 
                ⢀⣠⣤⠄⣿⣿⡇⣿⣿⡇⣤⣤⡀                   agent workspace                           
             ⢀⣴⣶⣿⠿⣋⣾⡿⠛⠁⠙⢿⣷⣜⢿⣿⣾⣦⠄                                                          
      ⣠⣤    ⣠⣿⣿⠟⣡⡾⠛⠉     ⠉⠻⢿⣬⡻⣿⡌⣧⡀              model     —                               
  ⢠⣴⣄⠸⠛⠉   ⢰⣿⣿⡃⣿⡟  ⣀⡀   ⢀⡀  ⢹⣷⠄⣾⣿⣿              workspace ~/workspace                     
   ⠈⠁⠠⡀⣀   ⢰⣦⡙⠇⣿⠁ ⢸⣿⣿   ⣿⣿⡆  ⣿⡦⢏⣵⣶⡆             branch    —                               
   ⣠⣔⣚⠿⠏⣠⣄ ⢈⣙⢿⣦⡩⣷⣀ ⠉⠁   ⠈⠉ ⣀⣴⠌⣴⡿⢋⣤⠁⢀⠲⠿⢤⡀        session   new                             
 ⢀⣼⣿⣿⠟⠼⣷ ⠏⠘⢂⡡⢤⣌⠳⠮⣝⡻⢷⣤⣄ ⣠⣴⣾⠿⣛⣥⠞⣫⡤⢌⡑⠛⠉⣶⠸⣿⣿⣷                                                 
 ⠘⢿⡟⡄ ⠸⠃  ⢠⡛⠿⡆⠉ ⡐⠬⠙⠳⠌⣟ ⣿⡿⠽⠋⢥⡶⢂⠙⠱⠿⢟⡃ ⠙⡇⠈⢹⣿⡇      What should we work through?              
   ⠙       ⠻⠁   ⠉            ⠋  ⠈⡿⠃     ⠟                                                 
                                                                                          
❯ run setup                                                                               
⏺ Run `ls`     00s                                                                        
  ⎿  $ ls                                                                                 
                                                                                          
                                                                                          
                                                                                          
──────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                         
──────────────────────────────────────────────────────────────────────────────────────────
  ◆ Deny this request                                                                     
  Add guidance for Sylvander (optional).                                                  
  > use docker                                                                            
                                                                                          
  ↵ reject with guidance   esc back   500 character max                                   
──────────────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch — · session —
