sylvander-tui/tests/snapshots/snapshots__approval_modal_overlays_chat.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(&state, 80, 24)"
---
Sylvander · deepseek-v4-flash · Disconnected · Connecting...                    
You: rm -rf /                                                                   
◐ bash                                                                          
  command  rm -rf /                                                             
                                                                                
                ┌ Tool Approval ───────────────────────────────┐                
                │Agent wants to run:                           │                
                │  >> 1. bash  {"command":"rm -rf /"}          │                
                │                                              │                
                │Tool 1/1  y=approve  n=reject  Y=all  N=reject│                
                │                                              │                
────────────────│                                              │────────────────
[y/n]           │                                              │                
                │                                              │                
                │                                              │                
                │                                              │                
                │                                              │                
                │                                              │                
                └──────────────────────────────────────────────┘                
                                                                                
                                                                                
                                                                                
                                                                                
Enter:send  Esc:quit
