sylvander-tui/tests/snapshots/snapshots__ask_user_free_text_mode.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(&state, 90, 22)"
---
◖S◗  Sylvander  new session                                                        — · ask
/Users/christmix/OraculoSpace/Sylvander/sylvander-tui · session —                         
──────────────────────────────────────────────────────────────────────────────────────────
                                                                                          
◖S◗  SYLVANDER                                                                            
      intelligent terminal workspace                                                      
                  ┌ Agent asks (free text) ────────────────────────────┐                  
      /Users/chris│Describe the bug in your own words:                 │                  
      What are we │                                                    │                  
                  │Type your answer:                                   │                  
──────────────────│> the loader hangs on cold start                    │──────────────────
│Ask Sylvander…   │                                                    │                 │
│                 │Enter: submit   Esc: cancel                         │                 │
│                 │                                                    │                 │
│                 └────────────────────────────────────────────────────┘                 │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│Answering this question clears this draft.                                              │
└────────────────────────────────────────────────────────────────────────────────────────┘
──────────────────────────────────────────────────────────────────────────────────────────
