sylvander-tui/tests/snapshots/snapshots__ask_user_multi_select_with_toggles.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(&state, 90, 26)"
---
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                  ┌ Agent asks (multi-select) ─────────────────────────┐                  
                  │Tags for this issue?                                │                  
                  │                                                    │                  
                  │☑ [1] urgent                                        │                  
                  │☐ [2] bug                                           │                  
                  │☐ [3] feature                                       │                  
                  │☐ [4] needs-review                                  │                  
                  │                                                    │                  
                  │Or type a free-text reply:                          │                  
                  │> edgecase                                          │                  
                  │                                                    │                  
                  └────────────────────────────────────────────────────┘                  
                                                                                          
                                                                                          
                                                                                          
──────────────────────────────────────────────────────────────────────────────────────────
>                                                                                         
──────────────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch — · session — · 0t                  connecting…   draft lo
