sylvander-tui/tests/snapshots/snapshots__ask_user_single_select_open.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(state, 90, 24)"
---
  › change it                                                                             
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
──────────────────────────────────────────────────────────────────────────────────────────
  ◆ One choice needed                                                                     
  Which style do you prefer?                                                              
                                                                                          
  › 1. Minimalist                                                                         
    2. Colorful                                                                           
    3. Monochrome                                                                         
    4. Other…                                                                             
  Type to answer with Other…                                                              
──────────────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch — · session —
