sylvander-tui/tests/snapshots/snapshots__command_line_accepts_arguments.snap
---
source: sylvander-tui/tests/snapshots.rs
assertion_line: 913
expression: "render_buf(state, 110, 30)"
---
                     ⢀⣠⢠⡖                                                                                     
                  ⢀⣠⣶⣿⡇⣿⣷⣤⣀                     Sylvander                                                     
                ⢀⣠⣤⠄⣿⣿⡇⣿⣿⡇⣤⣤⡀                   agent workspace                                               
             ⢀⣴⣶⣿⠿⣋⣾⡿⠛⠁⠙⢿⣷⣜⢿⣿⣾⣦⠄                                                                              
      ⣠⣤    ⣠⣿⣿⠟⣡⡾⠛⠉     ⠉⠻⢿⣬⡻⣿⡌⣧⡀              model     —                                                   
  ⢠⣴⣄⠸⠛⠉   ⢰⣿⣿⡃⣿⡟  ⣀⡀   ⢀⡀  ⢹⣷⠄⣾⣿⣿              workspace ~/workspace                                         
   ⠈⠁⠠⡀⣀   ⢰⣦⡙⠇⣿⠁ ⢸⣿⣿   ⣿⣿⡆  ⣿⡦⢏⣵⣶⡆             branch    —                                                   
   ⣠⣔⣚⠿⠏⣠⣄ ⢈⣙⢿⣦⡩⣷⣀ ⠉⠁   ⠈⠉ ⣀⣴⠌⣴⡿⢋⣤⠁⢀⠲⠿⢤⡀        session   new                                                 
 ⢀⣼⣿⣿⠟⠼⣷ ⠏⠘⢂⡡⢤⣌⠳⠮⣝⡻⢷⣤⣄ ⣠⣴⣾⠿⣛⣥⠞⣫⡤⢌⡑⠛⠉⣶⠸⣿⣿⣷                                                                     
 ⠘⢿⡟⡄ ⠸⠃  ⢠⡛⠿⡆⠉ ⡐⠬⠙⠳⠌⣟ ⣿⡿⠽⠋⢥⡶⢂⠙⠱⠿⢟⡃ ⠙⡇⠈⢹⣿⡇      What should we work through?                                  
   ⠙       ⠻⠁   ⠉            ⠋  ⠈⡿⠃     ⠟                                                                     
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
──────────────────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                                             
──────────────────────────────────────────────────────────────────────────────────────────────────────────────
› /theme         Change the active TUI theme                                                                  
──────────────────────────────────────────────────────────────────────────────────────────────────────────────
/theme midnight                                                                                               
──────────────────────────────────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch —                                                    connecting…   draft local
