sylvander-tui/tests/snapshots/snapshots__completed_edit_shows_inline_unified_diff.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(state, 90, 26)"
---
              ⢀⣤⣴⡆               Sylvander                                                
            ⢀⣚⣿⣿⣿⣿⢓⣀             agent workspace                                          
         ⢀⣴⣾⢿⣳⡿⠛⠙⢿⣾⣿⣷⣦           model     —                                              
  ⢀ ⣴⠆  ⣰⣿⣿⣵⠟⠉    ⠙⠻⣿⠿⣾⣦         workspace ~/workspace                                    
 ⠈⠛⠃⡁⡀  ⣿⡻⢾⡇ ⣶⣶  ⣶⣆ ⢻⣥⣿⣿⡄        branch    — · session new                                
 ⢀⣤⣶⣿⡣⣤⢀⢽⠿⣮⢷⣄⣉⠁  ⠉⣁⣤⡎⣵⠟⣭⣁⡔⢿⣄⡀                                                             
 ⣾⣿⠛⢹⡇⠈⢨⣶⡶⠎⢛⡿⣿⣳⡆⣶⣿⡿⣟⣋⢷⣶⣮⡅⢸⡜⢿⣿⡄   What should we work through?                             
 ⠈⠻⠁   ⠘⠞⠁ ⠒⠁ ⠉⠁⠉⠉ ⠉⠑ ⠈⣿⠇ ⠁⠈⠿⠁                                                            
                                                                                          
                                                                                          
❯ rename the state                                                                        
⏺ Edit file     00s                                                                       
  ⎿  Edit src/state.rs                                                                    
     --- a/src/state.rs                                                                   
     +++ b/src/state.rs                                                                   
     @@ -1,2 +1,2 @@                                                                      
     -let old_name = value;                                                               
     -return old_name;                                                                    
     +let state = value;                                                                  
     +return state;                                                                       
                                                                                          
                                                                                          
──────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                         
──────────────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch — · session —
