sylvander-tui/tests/snapshots/snapshots__design_canonical_welcome_lockup_120x36.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(state, 120, 36)"
---
        ⢀⣠⣶⣾⣀           Sylvander                                                                                       
      ⣠⣴⣶⣾⠿⢿⣷⣶⣤⡀        agent workspace                                                                                 
⢀⣄⡴⠆ ⣴⣿⣿⠋⣁ ⢀⡙⢻⣟⣿⡆                                                                                                       
 ⣩⣶⣆⡀⣿⣿⣯⡘⠿ ⠸⠟⣠⣿⣿⡻⣠⣄⡀    model     —                                                                                     
⢾⣟⢻⠇⢋⣿⡾⢻⡿⣷⡆⣾⡿⣿⡿⣾⣯⠹⡿⣿⡄   workspace ~/workspace                                                                           
 ⠁   ⠋ ⠈      ⠁⠈⠋  ⠘    branch    — · session new                                                                       
                        What should we work through?                                                                    
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                                                       
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
◌ connecting · model — · branch — · session — · 0 tok                                          connecting…   draft local
