sylvander-tui/tests/snapshots/snapshots__design_canonical_with_tool_step_grouped_120x36.snap
---
source: sylvander-tui/tests/snapshots.rs
assertion_line: 824
expression: "render_buf(s, 120, 36)"
---
❯ Review the auth middleware                                                                                            
⏺ Run `ls`     00s                                                                                                      
  ⎿  $ ls src/http  router.rs                                                                                           
  ⎿  Read src/http/middleware.rs                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                                                       
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
◌ working · model — · branch — · session — · 0 tok                                                esc interrupt   /draft
