sylvander-tui/tests/snapshots/snapshots__design_disconnected_state_120x36.snap
---
source: sylvander-tui/tests/snapshots.rs
expression: "render_buf(s, 120, 36)"
---
        ⢀⣠⣶⣾⣀           Sylvander                                                                                       
      ⣠⣴⣶⣾⠿⢿⣷⣶⣤⡀        agent workspace                                                                                 
⢀⣄⡴⠆ ⣴⣿⣿⠋⣁ ⢀⡙⢻⣟⣿⡆                                                                                                       
 ⣩⣶⣆⡀⣿⣿⣯⡘⠿ ⠸⠟⣠⣿⣿⡻⣠⣄⡀    model     —                                                                                     
⢾⣟⢻⠇⢋⣿⡾⢻⡿⣷⡆⣾⡿⣿⡿⣾⣯⠹⡿⣿⡄   workspace ~/workspace                                                                           
 ⠁   ⠋ ⠈      ⠁⠈⠋  ⠘    branch    — · session new                                                                       
                        What should we work through?                                                                    
                                                                                                                        
                                                                                                                        
❯ any draft here                                                                                                        
  Disconnected: server closed                                                                                           
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                                                       
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
! disconnected · model — · branch — · session — · 0 tok                               ! reconnecting…   /draft preserved
